Sat Mar 03 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Remove old ClearText function

Mon Feb 27 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* play.c: Fix 'too good' tutor bug

Fri Feb 24 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c and others: Sort out copy/paste for gtk 2

Sat Feb 11 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c: Fixed an import bug for TMG files
		(reported by Christian Anthon).

Mon Feb 06 08:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkfile.c, eval.c, matchequity.c: 3 small fixes from Philippe Michel

Thu Feb 02 07:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkgamelist.c: Replace old gdk_string_width() calls

Thu Jan 31 07:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Add menu option to switch between 2d and 3d views

Sun Jan 29 19:32:05 GMT 2006 Jim Segrave <jes@jes-2.demon.nl>
	* gtkpanels.c - don't do anything to undock panels in CLI mode
	  ChangeLog entry for 27/01 listed the wrong source file, sigh

Fri Jan 27 18:36:46 GMT 2006 Jim Segrave <jes@jes-2.demon.nl>
	* play.c - don't do anything to undock panels in CLI mode
	
Sat Dec 17 -3:31:09 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
	* gtkchequer.c - CreateMoveListTools() must be called before
	  calling MoveListCreate(), otherwise coredumps can result
	
Sat Dec 17 -1:22:09 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
	* html.c - copy basemane() from simplelibgen.c to
	  get_basename(), as basename() is not promised to be
	  re-entrant. This caused all the links between html game
	  files to be set to the last call to basename()
	
Thu Dec 12 13:23:12 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	    *eval.c change assembler code labels to locals. gcc 3.42 saw
	    labels as redfined. I don't know what this will do to MS
	    compilers
	    or the Intel compiler.
	    
Fri Nov 18 16:38:11 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
