@@ -1,5 +1,10 @@
 Sat Mar 03 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
+	* gtktoolbar.c:  Undo any partial move that may have been made
+		when entering edit mode.
+
+Sat Mar 03 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
 	* gtkgame.c: Remove old ClearText function
 
 Mon Feb 27 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
